tests/ui/feature-gates/feature-gate-register_tool.rs
#![register_tool(tool)] //~ ERROR the `#[register_tool]` attribute is an experimental feature

fn main() {}
